--- a/trunk/ProjectScheduler/Reports/FinalProgramInformation.resx
+++ b/trunk/ProjectScheduler/Reports/FinalProgramInformation.resx
@@ -120,30 +120,6 @@
   <metadata name="Detail.Name" xml:space="preserve">
     <value>Detail</value>
   </metadata>
-  <metadata name="xrTable2.Name" xml:space="preserve">
-    <value>xrTable2</value>
-  </metadata>
-  <metadata name="xrTableRow5.Name" xml:space="preserve">
-    <value>xrTableRow5</value>
-  </metadata>
-  <metadata name="xrTableCell9.Name" xml:space="preserve">
-    <value>xrTableCell9</value>
-  </metadata>
-  <metadata name="xrTableCell12.Name" xml:space="preserve">
-    <value>xrTableCell12</value>
-  </metadata>
-  <metadata name="xrTableCell13.Name" xml:space="preserve">
-    <value>xrTableCell13</value>
-  </metadata>
-  <metadata name="xrTableCell11.Name" xml:space="preserve">
-    <value>xrTableCell11</value>
-  </metadata>
-  <metadata name="xrTableCell14.Name" xml:space="preserve">
-    <value>xrTableCell14</value>
-  </metadata>
-  <metadata name="xrTableCell10.Name" xml:space="preserve">
-    <value>xrTableCell10</value>
-  </metadata>
   <metadata name="PageFooter.Name" xml:space="preserve">
     <value>PageFooter</value>
   </metadata>
@@ -152,6 +128,12 @@
   </metadata>
   <metadata name="lblProgramNameValue.Name" xml:space="preserve">
     <value>lblProgramNameValue</value>
+  </metadata>
+  <metadata name="dataSet11.Name" xml:space="preserve">
+    <value>dataSet11</value>
+  </metadata>
+  <metadata name="dataSet11.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <metadata name="xrLabel2.Name" xml:space="preserve">
     <value>xrLabel2</value>
@@ -222,8 +204,44 @@
   <metadata name="xrTableCell7.Name" xml:space="preserve">
     <value>xrTableCell7</value>
   </metadata>
+  <metadata name="xrTableCell61.Name" xml:space="preserve">
+    <value>xrTableCell61</value>
+  </metadata>
+  <metadata name="xrTableCell59.Name" xml:space="preserve">
+    <value>xrTableCell59</value>
+  </metadata>
+  <metadata name="xrTableCell60.Name" xml:space="preserve">
+    <value>xrTableCell60</value>
+  </metadata>
+  <metadata name="xrTableCell62.Name" xml:space="preserve">
+    <value>xrTableCell62</value>
+  </metadata>
   <metadata name="xrTableCell8.Name" xml:space="preserve">
     <value>xrTableCell8</value>
+  </metadata>
+  <metadata name="xrTableRow5.Name" xml:space="preserve">
+    <value>xrTableRow5</value>
+  </metadata>
+  <metadata name="xrTableCell9.Name" xml:space="preserve">
+    <value>xrTableCell9</value>
+  </metadata>
+  <metadata name="xrTableCell10.Name" xml:space="preserve">
+    <value>xrTableCell10</value>
+  </metadata>
+  <metadata name="xrTableCell11.Name" xml:space="preserve">
+    <value>xrTableCell11</value>
+  </metadata>
+  <metadata name="xrTableCell12.Name" xml:space="preserve">
+    <value>xrTableCell12</value>
+  </metadata>
+  <metadata name="xrTableCell13.Name" xml:space="preserve">
+    <value>xrTableCell13</value>
+  </metadata>
+  <metadata name="xrTableCell14.Name" xml:space="preserve">
+    <value>xrTableCell14</value>
+  </metadata>
+  <metadata name="GroupFooter2.Name" xml:space="preserve">
+    <value>GroupFooter2</value>
   </metadata>
   <metadata name="DetailReport.Name" xml:space="preserve">
     <value>DetailReport</value>
@@ -419,9 +437,6 @@
   </metadata>
   <metadata name="xrTableCell45.Name" xml:space="preserve">
     <value>xrTableCell45</value>
-  </metadata>
-  <metadata name="GroupFooter2.Name" xml:space="preserve">
-    <value>GroupFooter2</value>
   </metadata>
   <metadata name="$this.Name" xml:space="preserve">
     <value>FinalProgramInformation</value>
