--- a/trunk/ProjectScheduler/Reports/FinalProgramInformation.resx
+++ b/trunk/ProjectScheduler/Reports/FinalProgramInformation.resx
@@ -159,80 +159,8 @@
   <metadata name="ReportHeader.Name" xml:space="preserve">
     <value>ReportHeader</value>
   </metadata>
-  <metadata name="lblProgramNameValue.Name" xml:space="preserve">
-    <value>lblProgramNameValue</value>
-  </metadata>
-  <metadata name="dataSet11.Name" xml:space="preserve">
-    <value>dataSet11</value>
-  </metadata>
-  <metadata name="dataSet11.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="xrLabel2.Name" xml:space="preserve">
-    <value>xrLabel2</value>
-  </metadata>
-  <metadata name="xrLabel1.Name" xml:space="preserve">
-    <value>xrLabel1</value>
-  </metadata>
-  <metadata name="ReportFooter.Name" xml:space="preserve">
-    <value>ReportFooter</value>
-  </metadata>
-  <metadata name="xrLine6.Name" xml:space="preserve">
-    <value>xrLine6</value>
-  </metadata>
-  <metadata name="xrLine5.Name" xml:space="preserve">
-    <value>xrLine5</value>
-  </metadata>
-  <metadata name="xrLine4.Name" xml:space="preserve">
-    <value>xrLine4</value>
-  </metadata>
-  <metadata name="xrLine3.Name" xml:space="preserve">
-    <value>xrLine3</value>
-  </metadata>
-  <metadata name="xrLine2.Name" xml:space="preserve">
-    <value>xrLine2</value>
-  </metadata>
-  <metadata name="xrLine1.Name" xml:space="preserve">
-    <value>xrLine1</value>
-  </metadata>
-  <metadata name="xrLabel4.Name" xml:space="preserve">
-    <value>xrLabel4</value>
-  </metadata>
-  <metadata name="GroupHeader2.Name" xml:space="preserve">
-    <value>GroupHeader2</value>
-  </metadata>
-  <metadata name="xrTable5.Name" xml:space="preserve">
-    <value>xrTable5</value>
-  </metadata>
-  <metadata name="xrTableRow13.Name" xml:space="preserve">
-    <value>xrTableRow13</value>
-  </metadata>
-  <metadata name="xrTableCell37.Name" xml:space="preserve">
-    <value>xrTableCell37</value>
-  </metadata>
-  <metadata name="xrTableCell38.Name" xml:space="preserve">
-    <value>xrTableCell38</value>
-  </metadata>
-  <metadata name="xrTableCell39.Name" xml:space="preserve">
-    <value>xrTableCell39</value>
-  </metadata>
-  <metadata name="xrTableCell40.Name" xml:space="preserve">
-    <value>xrTableCell40</value>
-  </metadata>
-  <metadata name="xrTableCell41.Name" xml:space="preserve">
-    <value>xrTableCell41</value>
-  </metadata>
-  <metadata name="xrTableCell43.Name" xml:space="preserve">
-    <value>xrTableCell43</value>
-  </metadata>
-  <metadata name="xrTableCell42.Name" xml:space="preserve">
-    <value>xrTableCell42</value>
-  </metadata>
-  <metadata name="xrTableCell44.Name" xml:space="preserve">
-    <value>xrTableCell44</value>
-  </metadata>
-  <metadata name="xrTableCell45.Name" xml:space="preserve">
-    <value>xrTableCell45</value>
+  <metadata name="xrLabel7.Name" xml:space="preserve">
+    <value>xrLabel7</value>
   </metadata>
   <metadata name="xrTable1.Name" xml:space="preserve">
     <value>xrTable1</value>
@@ -420,11 +348,158 @@
   <metadata name="xrTableCell34.Name" xml:space="preserve">
     <value>xrTableCell34</value>
   </metadata>
-  <metadata name="xrLabel7.Name" xml:space="preserve">
-    <value>xrLabel7</value>
+  <metadata name="lblProgramNameValue.Name" xml:space="preserve">
+    <value>lblProgramNameValue</value>
   </metadata>
-  <metadata name="GroupFooter2.Name" xml:space="preserve">
-    <value>GroupFooter2</value>
+  <metadata name="xrLabel2.Name" xml:space="preserve">
+    <value>xrLabel2</value>
+  </metadata>
+  <metadata name="xrLabel1.Name" xml:space="preserve">
+    <value>xrLabel1</value>
+  </metadata>
+  <metadata name="xrTable5.Name" xml:space="preserve">
+    <value>xrTable5</value>
+  </metadata>
+  <metadata name="xrTableRow13.Name" xml:space="preserve">
+    <value>xrTableRow13</value>
+  </metadata>
+  <metadata name="xrTableCell37.Name" xml:space="preserve">
+    <value>xrTableCell37</value>
+  </metadata>
+  <metadata name="xrTableCell38.Name" xml:space="preserve">
+    <value>xrTableCell38</value>
+  </metadata>
+  <metadata name="xrTableCell39.Name" xml:space="preserve">
+    <value>xrTableCell39</value>
+  </metadata>
+  <metadata name="xrTableCell40.Name" xml:space="preserve">
+    <value>xrTableCell40</value>
+  </metadata>
+  <metadata name="xrTableCell41.Name" xml:space="preserve">
+    <value>xrTableCell41</value>
+  </metadata>
+  <metadata name="xrTableCell43.Name" xml:space="preserve">
+    <value>xrTableCell43</value>
+  </metadata>
+  <metadata name="xrTableCell42.Name" xml:space="preserve">
+    <value>xrTableCell42</value>
+  </metadata>
+  <metadata name="xrTableCell44.Name" xml:space="preserve">
+    <value>xrTableCell44</value>
+  </metadata>
+  <metadata name="xrTableCell45.Name" xml:space="preserve">
+    <value>xrTableCell45</value>
+  </metadata>
+  <metadata name="ReportFooter.Name" xml:space="preserve">
+    <value>ReportFooter</value>
+  </metadata>
+  <metadata name="xrLine6.Name" xml:space="preserve">
+    <value>xrLine6</value>
+  </metadata>
+  <metadata name="xrLine5.Name" xml:space="preserve">
+    <value>xrLine5</value>
+  </metadata>
+  <metadata name="xrLine4.Name" xml:space="preserve">
+    <value>xrLine4</value>
+  </metadata>
+  <metadata name="xrLine3.Name" xml:space="preserve">
+    <value>xrLine3</value>
+  </metadata>
+  <metadata name="xrLine2.Name" xml:space="preserve">
+    <value>xrLine2</value>
+  </metadata>
+  <metadata name="xrLine1.Name" xml:space="preserve">
+    <value>xrLine1</value>
+  </metadata>
+  <metadata name="xrLabel4.Name" xml:space="preserve">
+    <value>xrLabel4</value>
+  </metadata>
+  <metadata name="dataSet11.Name" xml:space="preserve">
+    <value>dataSet11</value>
+  </metadata>
+  <metadata name="dataSet11.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="DetailReport.Name" xml:space="preserve">
+    <value>DetailReport</value>
+  </metadata>
+  <metadata name="Detail1.Name" xml:space="preserve">
+    <value>Detail1</value>
+  </metadata>
+  <metadata name="GroupHeader1.Name" xml:space="preserve">
+    <value>GroupHeader1</value>
+  </metadata>
+  <metadata name="DetailReport1.Name" xml:space="preserve">
+    <value>DetailReport1</value>
+  </metadata>
+  <metadata name="Detail2.Name" xml:space="preserve">
+    <value>Detail2</value>
+  </metadata>
+  <metadata name="xrTable7.Name" xml:space="preserve">
+    <value>xrTable7</value>
+  </metadata>
+  <metadata name="xrTableRow17.Name" xml:space="preserve">
+    <value>xrTableRow17</value>
+  </metadata>
+  <metadata name="xrTableCell71.Name" xml:space="preserve">
+    <value>xrTableCell71</value>
+  </metadata>
+  <metadata name="xrTableCell72.Name" xml:space="preserve">
+    <value>xrTableCell72</value>
+  </metadata>
+  <metadata name="xrTableCell73.Name" xml:space="preserve">
+    <value>xrTableCell73</value>
+  </metadata>
+  <metadata name="xrTableCell74.Name" xml:space="preserve">
+    <value>xrTableCell74</value>
+  </metadata>
+  <metadata name="xrTableCell75.Name" xml:space="preserve">
+    <value>xrTableCell75</value>
+  </metadata>
+  <metadata name="xrTableCell76.Name" xml:space="preserve">
+    <value>xrTableCell76</value>
+  </metadata>
+  <metadata name="xrTableCell77.Name" xml:space="preserve">
+    <value>xrTableCell77</value>
+  </metadata>
+  <metadata name="xrTableCell78.Name" xml:space="preserve">
+    <value>xrTableCell78</value>
+  </metadata>
+  <metadata name="GroupHeader2.Name" xml:space="preserve">
+    <value>GroupHeader2</value>
+  </metadata>
+  <metadata name="xrLabel3.Name" xml:space="preserve">
+    <value>xrLabel3</value>
+  </metadata>
+  <metadata name="xrTable2.Name" xml:space="preserve">
+    <value>xrTable2</value>
+  </metadata>
+  <metadata name="xrTableRow16.Name" xml:space="preserve">
+    <value>xrTableRow16</value>
+  </metadata>
+  <metadata name="xrTableCell63.Name" xml:space="preserve">
+    <value>xrTableCell63</value>
+  </metadata>
+  <metadata name="xrTableCell64.Name" xml:space="preserve">
+    <value>xrTableCell64</value>
+  </metadata>
+  <metadata name="xrTableCell65.Name" xml:space="preserve">
+    <value>xrTableCell65</value>
+  </metadata>
+  <metadata name="xrTableCell66.Name" xml:space="preserve">
+    <value>xrTableCell66</value>
+  </metadata>
+  <metadata name="xrTableCell67.Name" xml:space="preserve">
+    <value>xrTableCell67</value>
+  </metadata>
+  <metadata name="xrTableCell68.Name" xml:space="preserve">
+    <value>xrTableCell68</value>
+  </metadata>
+  <metadata name="xrTableCell69.Name" xml:space="preserve">
+    <value>xrTableCell69</value>
+  </metadata>
+  <metadata name="xrTableCell70.Name" xml:space="preserve">
+    <value>xrTableCell70</value>
   </metadata>
   <metadata name="$this.Name" xml:space="preserve">
     <value>FinalProgramInformation</value>
