--- a/trunk/ProjectScheduler/Reports/FinalProgramInformation.resx
+++ b/trunk/ProjectScheduler/Reports/FinalProgramInformation.resx
@@ -156,6 +156,12 @@
   <metadata name="PageFooter.Name" xml:space="preserve">
     <value>PageFooter</value>
   </metadata>
+  <metadata name="xrPageInfo1.Name" xml:space="preserve">
+    <value>xrPageInfo1</value>
+  </metadata>
+  <metadata name="xrLabel8.Name" xml:space="preserve">
+    <value>xrLabel8</value>
+  </metadata>
   <metadata name="ReportHeader.Name" xml:space="preserve">
     <value>ReportHeader</value>
   </metadata>
@@ -321,6 +327,9 @@
   <metadata name="xrTableCell29.Name" xml:space="preserve">
     <value>xrTableCell29</value>
   </metadata>
+  <metadata name="xrTableCell79.Name" xml:space="preserve">
+    <value>xrTableCell79</value>
+  </metadata>
   <metadata name="xrTableCell35.Name" xml:space="preserve">
     <value>xrTableCell35</value>
   </metadata>
@@ -332,6 +341,9 @@
   </metadata>
   <metadata name="xrTableCell31.Name" xml:space="preserve">
     <value>xrTableCell31</value>
+  </metadata>
+  <metadata name="xrTableCell80.Name" xml:space="preserve">
+    <value>xrTableCell80</value>
   </metadata>
   <metadata name="xrTableCell36.Name" xml:space="preserve">
     <value>xrTableCell36</value>
@@ -393,23 +405,8 @@
   <metadata name="ReportFooter.Name" xml:space="preserve">
     <value>ReportFooter</value>
   </metadata>
-  <metadata name="xrLine6.Name" xml:space="preserve">
-    <value>xrLine6</value>
-  </metadata>
-  <metadata name="xrLine5.Name" xml:space="preserve">
-    <value>xrLine5</value>
-  </metadata>
-  <metadata name="xrLine4.Name" xml:space="preserve">
-    <value>xrLine4</value>
-  </metadata>
-  <metadata name="xrLine3.Name" xml:space="preserve">
-    <value>xrLine3</value>
-  </metadata>
-  <metadata name="xrLine2.Name" xml:space="preserve">
-    <value>xrLine2</value>
-  </metadata>
-  <metadata name="xrLine1.Name" xml:space="preserve">
-    <value>xrLine1</value>
+  <metadata name="xrLabel9.Name" xml:space="preserve">
+    <value>xrLabel9</value>
   </metadata>
   <metadata name="xrLabel4.Name" xml:space="preserve">
     <value>xrLabel4</value>
